syntax = "proto3";
option java_package = "VireProtobuf.vire.utility";
option java_outer_classname = "MetadataRecordStub";
package vire.utility;

message MetadataRecord {

  // reserved 1-99

  string key   = 100; // Unique key
  string value = 101; // Value represention

}